# mkdocs-nixos-options

./: .gitignore  LICENSE.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yaml
mkdocs_nixos_options/: plugin.py
nix/: checks.nix  formatter.nix  shell.nix
tests/: test_plugin.py
